Prometheus/prometheus.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus-statefulset
  namespace: default
  labels:
    app: prometheus-server
spec:
  serviceName: "prometheus"
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-server
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      serviceAccount: prometheus
      containers:
        - name: prometheus
          image: prom/prometheus:v2.19.2
          args:
            - "--storage.tsdb.retention.time=12h"
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
          ports:
            - containerPort: 9090
          resources:
            requests:
              cpu: 500m
              memory: 500M
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus
            - name: prometheus-storage-volume
              mountPath: /prometheus
      volumes:
        - name: prometheus-config-volume
          configMap:
            name: prometheus-config-volume
  volumeClaimTemplates:
  - metadata:
      name: prometheus-storage-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "csi-ceph-hdd-gz1"
      resources:
        requests:
          storage: 5Gi
