Prometheus/service_prometheus.yml
---
apiVersion: v1 
kind: Service
metadata:
  name: prometheus-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus-server
  type: ClusterIP
